# otto

./: .env.example  .gitignore  CLAUDE.md  LICENSE  pyproject.toml
.github/workflows/: lint.yml
config/: otto.yaml.example
docs/: claude_desktop_setup.md  how-it-works.md  installation.md  rocrail_setup.md
otto/: __init__.py  config.py  layout.py  mcp_server.py  monitoring.py  personality.py  voice_daemon.py
otto/rocrail/: client.py
otto/tools/: __init__.py  _registry.py  automation.py  blocks.py  cars.py  extras.py  feedback.py  layout.py  locomotive.py  monitoring.py  outputs.py  routes.py  signals.py  staging.py  switches.py  system.py  voice.py
otto/voice/: speaker.py  speech_queue.py  transcriber.py
scripts/: install_models.py  test_connection.py
tests/: test_client.py  test_config.py  test_monitoring.py  test_personality.py  test_speech_queue.py  test_tools_registration.py
